<resources>
    <string name="app_name">ChatQiscus</string>
    <string name="todo">TODO</string>
    <string name="user_id">Email</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="start">Start</string>
    <string name="conversation">Conversation</string>
    <string name="oops">Oops!!</string>
    <string name="you_don_t_have_any_conversation">You don’t have any conversation.</string>
    <string name="lets_send_a_message_to_your_contact">Lets send a message to your contact</string>
    <string name="start_chat">Start Chat</string>
    <string name="empty_fields">%1$s must not empty</string>
    <string name="not_valid">%1$s wrong format</string>
    <string name="new_conversation">New Conversation</string>
    <string name="contacts">Contacts</string>
    <string name="send_a_message">Send a message!</string>
    <string name="great_discussion_start_from_greeting_each_others_first">Great discussion start from greeting each others first</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_from_gallery">Image From Gallery</string>
    <string name="file_document">File / Document</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="type_your_message">Type your message</string>
    <string name="date">Date</string>
    <string name="_10_00">10:00</string>
    <string name="sender">Sender</string>
    <string name="you">You</string>
    <string name="image">Image</string>
    <string name="qiscus_corrupted_file">Can not read file, please make sure that is not corrupted file!</string>
    <string name="qiscus_permission_message">If you not grant permission, the apps may not be working properly. So please grant the permission for better user experienced.</string>
    <string name="qiscus_grant">Grant Permission</string>
    <string name="qiscus_denny">Denny Permission</string>
    <string name="qiscus_permission_request_title">Please grant permissions to make apps working properly!</string>
    <string name="qiscus_add_a_caption">Add caption to your image</string>
    <string name="qiscus_chat_error_failed_open_picture">Failed to open picture!</string>
    <string name="qiscus_chat_error_failed_read_picture">Failed to read picture data!</string>
    <string name="qiscus_chat_error_failed_write">Failed to write temporary picture!</string>
    <string name="group_name_hint">Type group name here</string>
    <string name="group_upload_text">Give your group a name</string>
    <string name="application_not_found">Application not found</string>
    <string name="group_info">Group Info</string>
    <string name="group_name">Group Name</string>
    <string name="participants">Participants</string>
    <string name="please_wait">Please wait…</string>
    <string name="_99">99</string>
    <string name="last_message">Last message</string>
    <string name="chatroom_s_name">Chatroom\'s Name</string>
    <string name="header">Header</string>
</resources>