<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatarProfil"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:adjustViewBounds="true"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/conversation"
                    android:textColor="@color/teal_700"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/createChat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:adjustViewBounds="true"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    app:srcCompat="@drawable/search" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRoom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="7"
        tools:listitem="@layout/item_chat_room"/>

    <LinearLayout
        android:id="@+id/linEmptyChatRooms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/empty_room" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/oops"
            android:textColor="#666666"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/you_don_t_have_any_conversation"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/lets_send_a_message_to_your_contact"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartChat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/start_chat"
            android:textSize="18sp"
            app:cornerRadius="16dp"/>

    </LinearLayout>

</LinearLayout>