<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.groupchatcreation.GroupChatCreationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/group_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/teal_700" />

            <ImageView
                android:id="@+id/imgDone"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="16dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_check" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/qiscus_light_grey" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/group_avatar"
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:layout_margin="25dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/group_name"
                    android:textAllCaps="true"
                    android:textColor="@color/qiscus_secondary_text"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/group_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/group_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_upload_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/qiscus_light_grey"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/qiscus_white_grey"
            android:padding="12dp"
            android:text="@string/participants"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvParticipant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_contact"
            tools:itemCount="5"/>
    </LinearLayout>

</RelativeLayout>